src/objects/Move_request__c.object
<CustomObject>
    <description>Used to log requests for moves between sites</description>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Move_date__c</fullName>
        <label>Actual Move date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BCR_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCR Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCR_Raised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCR Raised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Logged__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Logged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <label>Lease Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_contact__c</fullName>
        <label>Local contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_contact_email__c</fullName>
        <label>Local contact email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location the move is from</description>
        <label>From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Move requests</relationshipLabel>
        <relationshipName>Move_requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_Budget__c</fullName>
        <label>Move Budget</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_Type__c</fullName>
        <label>Move Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Desks / Space in current location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office move ( closure and opening )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NUmber_of_staff__c</fullName>
        <description>Number of staff moving as an indication of size</description>
        <label>NUmber of staff</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Moving__c</fullName>
        <label>Reason for Moving</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Property inspection &amp; approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiate &amp; approve Heads of Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiate &amp; approve tenancy agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenancy agreement to be signed &amp; completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit-out of property &amp; move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Space adapted to meet requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date for move</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tentative_to_location__c</fullName>
        <description>To location description prior to confirmed address</description>
        <label>Tentative to location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location the site is moving to</description>
        <label>To Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Move requests (To Location)</relationshipLabel>
        <relationshipName>Move_requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Move request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Tentative_to_location__c</columns>
        <columns>Target_Date__c</columns>
        <columns>NUmber_of_staff__c</columns>
        <columns>BCR_Approved__c</columns>
        <columns>BCR_Raised__c</columns>
        <columns>Lease_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_with_detail</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>To_Location__c</columns>
        <columns>Reason_for_Moving__c</columns>
        <columns>Actual_Cost__c</columns>
        <columns>Actual_Move_date__c</columns>
        <columns>BCR_Approved__c</columns>
        <columns>BCR_Raised__c</columns>
        <columns>Comments__c</columns>
        <columns>Date_Logged__c</columns>
        <columns>Lease_Status__c</columns>
        <columns>Local_contact__c</columns>
        <columns>Local_contact_email__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with detail</label>
    </listViews>
    <listViews>
        <fullName>Pending_Moves</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Actual_Move_date__c</columns>
        <columns>Actual_Cost__c</columns>
        <columns>Move_Budget__c</columns>
        <columns>NUmber_of_staff__c</columns>
        <columns>Reason_for_Moving__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>Pending Moves</label>
    </listViews>
    <nameField>
        <label>Move request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Move requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>